// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assets & route handlers 1`] = `
"import { readFile } from "node:fs/promises";

// not a reference
const docs = "new URL('./nope.ttf', import.meta.url)";
export const font = readFile(new URL("./font.ttf", import.meta.url));
"
`;

exports[`assets & route handlers 2`] = `
"import { cn } from "../../../lib/cn";

export async function POST(req: Request) {
  return Response.json(cn(await req.text()));
}"
`;

exports[`compile 1`] = `
{
  "components": [
    {
      "files": [
        "button.tsx",
      ],
      "name": "button",
      "title": "Button",
    },
    {
      "description": "A card",
      "files": [
        "card/index.tsx",
      ],
      "name": "card",
    },
    {
      "files": [
        "chat.ts",
      ],
      "name": "chat",
    },
    {
      "files": [
        "layout.tsx",
      ],
      "name": "layout",
    },
    {
      "files": [
        "og/image.tsx",
      ],
      "name": "og",
    },
  ],
  "files": {
    "button.tsx": {
      "imports": [
        {
          "bindings": undefined,
          "id": "ui:utils/cn.ts",
          "start": 20,
        },
      ],
      "type": "ui",
    },
    "card/index.tsx": {
      "dependencies": {
        "acme-ui": "^1.2.0",
      },
      "devDependencies": {
        "@types/hast": "^3.0.0",
      },
      "imports": [
        {
          "bindings": undefined,
          "id": "ui:button.tsx",
          "start": 106,
        },
        {
          "bindings": undefined,
          "id": "ui:layout.tsx",
          "package": "acme-ui/layout",
          "start": 244,
        },
        {
          "bindings": undefined,
          "id": "ui:card/parts.tsx",
          "start": 284,
        },
        {
          "bindings": undefined,
          "id": "ui:button.tsx",
          "start": 365,
        },
      ],
      "target": "<dir>/card/index.tsx",
      "type": "components",
    },
    "card/parts.tsx": {
      "target": "<dir>/card/parts.tsx",
      "type": "components",
    },
    "chat.ts": {
      "imports": [
        {
          "bindings": undefined,
          "id": "ui:utils/cn.ts",
          "start": 83,
        },
      ],
      "route": "api/chat",
      "type": "route-handler",
    },
    "layout.tsx": {
      "dependencies": {
        "acme-ui": "^1.2.0",
      },
      "target": "<dir>/layout.tsx",
      "type": "layout",
    },
    "og/font.ttf": {
      "target": "<dir>/og/font.ttf",
      "type": "lib",
    },
    "og/image.tsx": {
      "imports": [
        {
          "bindings": undefined,
          "id": "ui:og/font.ttf",
          "start": 158,
        },
      ],
      "target": "<dir>/og/image.tsx",
      "type": "lib",
    },
    "utils/cn.ts": {
      "dependencies": {
        "clsx": "^2.0.0",
      },
      "type": "lib",
    },
  },
  "name": "ui",
  "registries": [
    "extra",
  ],
}
`;

exports[`compile 2`] = `
"import type { Element } from "hast";
import { readFile } from "node:fs/promises";
import { Button } from "ui:button.tsx";
import { useCtx } from "acme-ui";
import { useAcmeTheme as useTheme, type Theme } from "acme-ui";
import { Layout } from "acme-ui/layout";
import { Title } from "ui:card/parts.tsx";

// keep me

export function Card() {
  const lazy = import("ui:button.tsx");
  return <Layout />;
}
"
`;

exports[`compile 3`] = `
{
  "components": [
    {
      "files": [
        "badge.tsx",
      ],
      "name": "badge",
    },
  ],
  "files": {
    "badge.tsx": {
      "dependencies": {
        "acme-ui": "^1.2.0",
      },
      "imports": [
        {
          "bindings": undefined,
          "id": "ui:utils/cn.ts",
          "start": 20,
        },
        {
          "bindings": undefined,
          "id": "ui:button.tsx",
          "start": 61,
        },
        {
          "bindings": undefined,
          "id": "ui:layout.tsx",
          "package": "acme-ui/layout",
          "start": 101,
        },
      ],
      "type": "components",
    },
  },
  "name": "extra",
}
`;

exports[`install 2`] = `
"import type { Element } from "hast";
import { readFile } from "node:fs/promises";
import { Button } from "../ui/button";
import { useCtx } from "acme-ui";
import { useAcmeTheme as useTheme, type Theme } from "acme-ui";
import { Layout } from "acme-ui/layout";
import { Title } from "./parts";

// keep me

export function Card() {
  const lazy = import("../ui/button");
  return <Layout />;
}
"
`;

exports[`preserved import links to installed file 1`] = `
"import { cn } from "../lib/cn";
import { Button } from "./ui/button";
import { Layout } from "./layouts/layout";
import "acme-ui/style.css";

export const Badge = () => cn(Button, Layout);
"
`;

exports[`treeshake: compile 1`] = `
""use client";
import { clsx } from "clsx";
import type { ClassValue } from "clsx";
import { twMerge } from "tailwind-merge";
import type { Ref } from "react";
import type { RefCallback } from "react";
import { trim } from "shake:lib/format.ts";

export function cn(...inputs: ClassValue[]) {
  return twMerge(clsx(inputs));
}

// matches a single trailing slash
const TRAILING_SLASH = /\\/$/;

function normalize(url: string) {
  return url.replace(TRAILING_SLASH, "");
}

/**
 * Whether \`url\` is the current page.
 */
export function isActive(url: string, pathname: string) {
  return normalize(url) === normalize(pathname);
}

export function mergeRefs<T>(...refs: Ref<T>[]): RefCallback<T> {
  return (value) => {
    for (const ref of refs) {
      if (typeof ref === "function") ref(value);
      else if (ref) ref.current = value;
    }
  };
}

export function label(text: string) {
  return trim(text);
}
"
`;

exports[`treeshake: compile 2`] = `
{
  "imports": [
    {
      "bindings": undefined,
      "id": "shake:lib/format.ts",
      "start": 223,
    },
  ],
  "stmtInfos": [
    {
      "end": 13,
    },
    {
      "declares": [
        "clsx",
      ],
      "dependencies": {
        "clsx": "^2.0.0",
      },
      "end": 42,
      "import": true,
    },
    {
      "declares": [
        "ClassValue",
      ],
      "dependencies": {
        "clsx": "^2.0.0",
      },
      "end": 82,
      "import": true,
    },
    {
      "declares": [
        "twMerge",
      ],
      "dependencies": {
        "tailwind-merge": "^3.0.0",
      },
      "end": 124,
      "import": true,
    },
    {
      "declares": [
        "Ref",
      ],
      "devDependencies": {
        "@types/react": "^19.0.0",
      },
      "end": 158,
      "import": true,
    },
    {
      "declares": [
        "RefCallback",
      ],
      "devDependencies": {
        "@types/react": "^19.0.0",
      },
      "end": 200,
      "import": true,
    },
    {
      "declares": [
        "trim",
      ],
      "end": 244,
      "import": true,
    },
    {
      "declares": [
        "cn",
      ],
      "end": 325,
      "references": [
        2,
        3,
        1,
      ],
    },
    {
      "declares": [
        "TRAILING_SLASH",
      ],
      "end": 391,
    },
    {
      "declares": [
        "normalize",
      ],
      "end": 470,
      "references": [
        8,
      ],
    },
    {
      "declares": [
        "isActive",
      ],
      "end": 626,
      "references": [
        9,
      ],
    },
    {
      "declares": [
        "mergeRefs",
      ],
      "end": 848,
      "references": [
        4,
        5,
      ],
    },
    {
      "declares": [
        "label",
      ],
      "end": 911,
      "references": [
        6,
      ],
    },
  ],
  "type": "lib",
}
`;

exports[`treeshake: create, merge, unchanged 1`] = `
""use client";

// matches a single trailing slash
const TRAILING_SLASH = /\\/$/;

function normalize(url: string) {
  return url.replace(TRAILING_SLASH, "");
}

/**
 * Whether \`url\` is the current page.
 */
export function isActive(url: string, pathname: string) {
  return normalize(url) === normalize(pathname);
}
"
`;

exports[`treeshake: create, merge, unchanged 2`] = `
""use client";
import { clsx } from "clsx";
import type { ClassValue } from "clsx";
import { twMerge } from "tailwind-merge";
import type { Ref } from "react";
import type { RefCallback } from "react";
import { trim } from "./format";

// matches a single trailing slash
const TRAILING_SLASH = /\\/$/;

function normalize(url: string) {
  return url.replace(TRAILING_SLASH, "");
}

/**
 * Whether \`url\` is the current page.
 */
export function isActive(url: string, pathname: string) {
  return normalize(url) === normalize(pathname);
}

export const mine = true;

export function cn(...inputs: ClassValue[]) {
  return twMerge(clsx(inputs));
}

export function mergeRefs<T>(...refs: Ref<T>[]): RefCallback<T> {
  return (value) => {
    for (const ref of refs) {
      if (typeof ref === "function") ref(value);
      else if (ref) ref.current = value;
    }
  };
}

export function label(text: string) {
  return trim(text);
}
"
`;

exports[`treeshake: keep declarations of consumer 1`] = `
"import type { Ref } from "react";
import type { RefCallback } from "react";
import { trim } from "./format";

export const cn = (...v: string[]) => v.join(" ");

export function mergeRefs<T>(...refs: Ref<T>[]): RefCallback<T> {
  return (value) => {
    for (const ref of refs) {
      if (typeof ref === "function") ref(value);
      else if (ref) ref.current = value;
    }
  };
}

export function label(text: string) {
  return trim(text);
}
"
`;
